--- a/.github/workflows/aseprite_build_deploy.yml
+++ b/.github/workflows/aseprite_build_deploy.yml
@@ -66,7 +66,7 @@ jobs:
        matrix:
          os: [macOS-latest]
          build_type: [RelWithDebInfo]
-         enable_ui: [off]
+         enable_ui: [on]
        fail-fast: false    
     steps:
     - name: ccache
