--- a/.github/workflows/aseprite_build_deploy.yml
+++ b/.github/workflows/aseprite_build_deploy.yml
@@ -65,7 +65,7 @@ jobs:
     strategy:
        matrix:
          os: [macOS-latest]
-         build_type: [RelWithDebInfo, Debug]
+         build_type: [RelWithDebInfo]
          enable_ui: [off]
        fail-fast: false    
     steps:
